<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Intratek</string>

    <!-- Strings related to noData -->
    <string name="nodata">No Data</string>

    <!-- Strings related to menu -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_modules">Modules</string>
    <string name="menu_planning">Planning</string>
    <string name="menu_grades">Grades</string>
    <string name="menu_projects">Projects</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_more">More</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Log out</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gpa">GPA :</string>
    <string name="menu_credits">CREDITS :</string>
    <string name="menu_logtime">LOG :</string>
    <string name="menu_login">LOGIN :</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password (Unix)</string>
    <string name="action_login">Log in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_login">This login is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="action_log_in_short">Log in</string>

    <!-- Strings related to launcher -->
    <string name="splash_content">INTRATEK</string>

    <!-- Strings related to activities -->
    <string name="title_activity_launcher">Intratek</string>
    <string name="title_activity_login">Intratek - Login</string>
    <string name="title_activity_home">Intratek - Home</string>
    <string name="title_activity_profile">Intratek - Profile</string>
    <string name="title_activity_modules">Intratek - Modules</string>
    <string name="title_activity_planning">Intratek - Planning</string>
    <string name="title_activity_grades">Intratek - Grades</string>
    <string name="title_activity_projects">Intratek - Projects</string>
    <string name="title_activity_messages">Intratek - Messages</string>
    <string name="title_activity_about">Intratek - About</string>
    <string name="title_activity_logout">Intratek - Disconnect</string>

    <!-- Strings related to home -->
    <string name="enter_token">Enter token for activity </string>
    <string name="valid">Validate</string>
    <string name="cancel">Cancel</string>

    <!-- Strings related to profile -->
    <string name="profile_name">Name :</string>
    <string name="profile_mail">E-Mail :</string>
    <string name="profile_ids">Uid / Gid :</string>
    <string name="profile_location">Location :</string>

    <!-- String related to Grades -->
    <string name="text_button_more">More</string>

    <!-- String related to Logout -->
    <string name="logout_title">Log out</string>
    <string name="logout_text">Are you sure you want to log out ?</string>

    <!-- String related to Project -->
    <string name="switch_text">Registered only</string>

    <!-- String related to Modules -->
    <string name="currentyear">2015</string>

    <!-- String related to Planning -->
    <string name="planning_from">Week from</string>
    <string name="planning_to">to</string>
    <string name="planning_monday">Monday</string>
    <string name="planning_tuesday">Tuesday</string>
    <string name="planning_wednesday">Wednesday</string>
    <string name="planning_thursday">Thursday</string>
    <string name="planning_friday">Friday</string>
    <string name="planning_saturday">Saturday</string>
    <string name="planning_sunday">Sunday</string>
    <string name="token">token</string>

    <!-- String related to About -->
    <string name="about_version">Version</string>
    <string name="about_version_text">Version ID : 1.0\nLast update : 31/01/2016</string>
    <string name="about_author">Authors</string>
    <string name="about_author_text">Jordan Chazottes\nSébastien Cache-Delanos\nLoïc Houdu</string>

</resources>
