<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home" android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item android:id="@+id/nav_profile" android:icon="@drawable/ic_menu_account"
            android:title="@string/menu_profile" />
        <item android:id="@+id/nav_planning" android:icon="@drawable/ic_menu_calendar"
            android:title="@string/menu_planning" />
        <item android:id="@+id/nav_modules" android:icon="@drawable/ic_menu_module"
            android:title="@string/menu_modules" />
        <item android:id="@+id/nav_projects" android:icon="@drawable/ic_menu_project"
            android:title="@string/menu_projects" />
        <item android:id="@+id/nav_grades" android:icon="@drawable/ic_menu_grade"
            android:title="@string/menu_grades" />
        <item android:id="@+id/nav_messages" android:icon="@drawable/ic_menu_message"
            android:title="@string/menu_messages" />
    </group>

    <item android:title="@string/menu_more">
        <menu>
            <item android:id="@+id/nav_about" android:icon="@drawable/ic_menu_info"
                android:title="@string/menu_about" />
            <item android:id="@+id/nav_logout" android:icon="@drawable/ic_menu_deco"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>