<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="@dimen/nav_header_height"
    android:background="#203186"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:weightSum="1"
    android:padding="0dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="130dp"
        android:layout_height="fill_parent"
        android:layout_marginTop="30dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="125dp"
            android:id="@+id/profile_image"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="160dp"
        android:layout_height="fill_parent"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/menu_gpa"
                android:id="@+id/gpa_label"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/menu_credits"
                android:id="@+id/credits_label"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/menu_logtime"
                android:id="@+id/logtime_label"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/menu_login"
                android:id="@+id/login_label"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="110dp"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/nodata"
                android:id="@+id/gpa_text"
                android:layout_margin="5dp"
                android:layout_gravity="left"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/nodata"
                android:id="@+id/credits_text"
                android:layout_margin="5dp"
                android:layout_gravity="left"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/nodata"
                android:id="@+id/logtime_text"
                android:layout_margin="5dp"
                android:layout_gravity="left"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/nodata"
                android:id="@+id/login_text"
                android:layout_margin="5dp"
                android:layout_gravity="left"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
