<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    tools:context="epitech.intratek.Profile">

    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="5dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#203186"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:weightSum="1"
            android:padding="0dp"
            android:id="@+id/linearLayout">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="130dp"
                android:layout_height="fill_parent"
                android:layout_margin="5dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/profile_picture"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="160dp"
                android:layout_height="fill_parent"
                android:layout_margin="5dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/menu_gpa"
                        android:id="@+id/label_gpa"
                        android:layout_gravity="right"
                        android:layout_margin="10dp"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/menu_credits"
                        android:id="@+id/label_credits"
                        android:layout_gravity="right"
                        android:layout_margin="10dp"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/menu_logtime"
                        android:id="@+id/label_logtime"
                        android:layout_gravity="right"
                        android:layout_margin="10dp"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/menu_login"
                        android:id="@+id/label_login"
                        android:layout_gravity="right"
                        android:layout_margin="10dp"
                        android:textSize="15dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="110dp"
                    android:layout_height="fill_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/nodata"
                        android:id="@+id/profile_gpa"
                        android:layout_margin="10dp"
                        android:layout_gravity="left"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/nodata"
                        android:id="@+id/profile_credits"
                        android:layout_margin="10dp"
                        android:layout_gravity="left"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/nodata"
                        android:id="@+id/profile_logtime"
                        android:layout_margin="10dp"
                        android:layout_gravity="left"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/nodata"
                        android:id="@+id/profile_login"
                        android:layout_margin="10dp"
                        android:layout_gravity="left"
                        android:textSize="15dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:background="#8a8a8a"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/profile_name"
                    android:id="@+id/profile_name"
                    android:layout_gravity="right"
                    android:layout_margin="10dp"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/profile_mail"
                    android:id="@+id/profile_mail"
                    android:layout_gravity="right"
                    android:layout_margin="10dp"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/profile_ids"
                    android:id="@+id/profile_ids"
                    android:layout_gravity="right"
                    android:layout_margin="10dp"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/profile_location"
                    android:id="@+id/profile_location"
                    android:layout_gravity="right"
                    android:layout_margin="10dp"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/nodata"
                    android:id="@+id/profiletext_name"
                    android:layout_margin="10dp"
                    android:layout_gravity="left"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/nodata"
                    android:id="@+id/profiletext_email"
                    android:layout_margin="10dp"
                    android:layout_gravity="left"
                    android:textSize="15dp"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/nodata"
                    android:id="@+id/profiletext_ids"
                    android:layout_margin="10dp"
                    android:layout_gravity="left"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/nodata"
                    android:id="@+id/profiletext_location"
                    android:layout_margin="10dp"
                    android:layout_gravity="left"
                    android:textSize="15dp" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
